--- a/ch4.ipynb
+++ b/ch4.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ch4.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO6t1BsK3jiWC19aPeK8s+T",
+      "authorship_tag": "ABX9TyMKBtd1TqQLUDu5DsLldIcv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
       "metadata": {
         "id": "KSCr_fWPAW49"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "ES8iHz-RAgSY"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -72,7 +72,7 @@
       "metadata": {
         "id": "2HJNllAeArAo"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -84,7 +84,7 @@
       "metadata": {
         "id": "CzW09u0IAv09"
       },
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -101,7 +101,7 @@
       "metadata": {
         "id": "9q21hFefA0Yc"
       },
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -116,10 +116,125 @@
     {
       "cell_type": "code",
       "source": [
+        "uname = \"jrichwiltshire\"\n",
+        "!git config --global user.email '$uname@gmail.com'\n",
+        "!git config --global user.name '$uname'\n",
+        "\n",
+        "from getpass import getpass\n",
+        "password = getpass('Password:')\n",
+        "!git clone https://github.com/$uname/hands-on-data-science\n",
+        "%cd ./"
+      ],
+      "metadata": {
+        "id": "0iUKCYsyHAW4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6712ca50-d672-47f3-868c-d9c44332ab63"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Password:··········\n",
+            "Cloning into 'hands-on-data-science'...\n",
+            "remote: Enumerating objects: 23, done.\u001b[K\n",
+            "remote: Counting objects: 100% (23/23), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (14/14), done.\u001b[K\n",
+            "remote: Total 23 (delta 4), reused 3 (delta 0), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (23/23), done.\n",
+            "/content/hands-on-data-science/hands-on-data-science/hands-on-data-science/hands-on-data-science/hands-on-data-science/hands-on-data-science/hands-on-data-science/hands-on-data-science\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Where to save the figures\n",
+        "PROJECT_ROOT_DIR = '.'\n",
+        "CHAPTER_ID = 'training_linear_models'\n",
+        "IMAGES_PATH = os.path.join(PROJECT_ROOT_DIR, 'images', )"
+      ],
+      "metadata": {
+        "id": "rrrnkY49hLrT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Training Models"
+      ],
+      "metadata": {
+        "id": "J22GrWESg_2K"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "0iUKCYsyHAW4"
+        "id": "DfdNqm3ig-ZJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Save to Github"
+      ],
+      "metadata": {
+        "id": "F3JYNy2sgegE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# create a file, then add it to stage\n",
+        "!git add --all\n",
+        "!git commit -m 'initial commit'  # commit in Colab\n",
+        "!git push https://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@github.com/$uname/hands-on-data-science # push to github"
+      ],
+      "metadata": {
+        "id": "Eq72abv2OMIH",
+        "outputId": "590b9cdb-1f11-48ef-f060-38b619375119",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[main 2d8f6fd] initial commit\n",
+            " 1 file changed, 1 insertion(+)\n",
+            " create mode 100644 hello.txt\n",
+            "Counting objects: 3, done.\n",
+            "Delta compression using up to 2 threads.\n",
+            "Compressing objects: 100% (2/2), done.\n",
+            "Writing objects: 100% (3/3), 298 bytes | 298.00 KiB/s, done.\n",
+            "Total 3 (delta 0), reused 0 (delta 0)\n",
+            "To https://github.com/jrichwiltshire/hands-on-data-science\n",
+            "   9364845..2d8f6fd  main -> main\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "bWBQZ35gONoj"
       },
       "execution_count": null,
       "outputs": []
