ch 5 as of 1/3/23

--- a/ch5_support_vector_machines.ipynb
+++ b/ch5_support_vector_machines.ipynb
@@ -387,12 +387,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "07e32792-e74b-437b-9432-4aff51e32033",
+   "metadata": {},
+   "source": [
+    "## 2.2 Gaussian RBF Kernel"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fea3581-c889-4842-bdc7-31b8fb497070",
+   "id": "1f899267-6eaf-46ad-9e02-8801b094aec7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rbf_kernel_svm_clf = Pipeline([\n",
+    "    ('scaler', Stan"
+   ]
   }
  ],
  "metadata": {
